manifests/03-apisix/ingressss-annotations-10000/1240-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01240-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01240-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01241-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01241-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01242-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01242-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01243-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01243-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01244-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01244-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01245-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01245-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01246-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01246-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01247-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01247-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01248-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01248-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01249-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01249-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
